- Fixed bug #45571 (ReflectionClass::export() shows superclasses' private static methods.)   patch by Robin Fernandes